feat: add meta tags

--- a/apps/frontend/src/index.html
+++ b/apps/frontend/src/index.html
@@ -1,13 +1,19 @@
 <!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Frontend</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+<html lang="pt-BR">
+  <head>
+    <meta charset="utf-8">
+    <title>Eventos - Criação e Gestão de Eventos</title>
+    <base href="/">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description"
+      content="Eventos é um sistema completo para criar, gerenciar eventos e enviar convites personalizados para seus convidados. Facilite a organização e o controle de eventos com nossa plataforma.">
+    <meta name="keywords"
+      content="eventos, criação de eventos, gestão de eventos, envio de convites, organização de eventos, plataforma de eventos">
+    <meta name="author" content="Luan Alves">
+    <meta name="robots" content="index, follow">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
